[package]
name = "naiad-experiment"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely="*"
abomonation="*"
abomonation_derive = "0.5.0"

[[bin]]
name = "vb1"
path = "src/vb/vb1.rs"

[[bin]]
name = "vb2"
path = "src/vb/vb2.rs"
