[package]
name = "naiad-experiment"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation="*"
abomonation_derive = "0.5.0"
chrono = "0.4.15"
clap = "2.33.3"
rand = "0.7.3"
timely="*"
